# keylogger-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/modules/: logging.rs
