[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

default-run = "keylogger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/server.rs"

[features]
window_titles = ["winapi"]

[dependencies]
rdev = "0.5.1"
serde_json = "1.0.68"
structured-logger = "1.0.3"
serde = {version = "1.0.188", features = ["derive"] }
winapi = { features = ["winuser", "consoleapi"], version = "0.3.9", optional = true }

reqwest = "0.11.4"
warp = "0.3.1"
tokio = { version = "1.28.0", features = ["full"] }
log = "0.4.20"
